# raytracing

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  camera.cpp  camera.h  hittable.h  hittable_list.cpp  hittable_list.h  lambertian.cpp  lambertian.h  main.cpp  material.h  metal.cpp  metal.h  random.h  ray.cpp  ray.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h  vec3.hpp
test/: CMakeLists.txt  camera_test.cpp  hittable_list_test.cpp  random_test.cpp  ray_test.cpp  sphere_test.cpp  vec3_test.cpp
