cmake_minimum_required (VERSION 3.10)

project("raytracing")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories("src")

add_subdirectory("src")

include(CTest)
if(BUILD_TESTING)
	add_subdirectory("test")
endif()
